--- a/EDAass.ipynb
+++ b/EDAass.ipynb
@@ -1694,6 +1694,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1)Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of the ID feature is  214298.33860603065\n",
+      "The median of the ID feature is  221759.0\n",
+      "The mode of the ID feature is  16\n",
+      "The variance of the ID feature is  897915860.1913377\n",
+      "The skewness of the ID feature is  -2.2679826532276723\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Age feature is  25.122205745043114\n",
+      "The median of the Age feature is  25.0\n",
+      "The mode of the Age feature is  21\n",
+      "The variance of the Age feature is  21.80836494657141\n",
+      "The skewness of the Age feature is  0.3917641387687474\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Overall feature is  66.23869940132916\n",
+      "The median of the Overall feature is  66.0\n",
+      "The mode of the Overall feature is  66\n",
+      "The variance of the Overall feature is  47.7333083819523\n",
+      "The skewness of the Overall feature is  0.06718492227833812\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Potential feature is  71.30729939034437\n",
+      "The median of the Potential feature is  71.0\n",
+      "The mode of the Potential feature is  70\n",
+      "The variance of the Potential feature is  37.656578046304695\n",
+      "The skewness of the Potential feature is  0.26615359638288594\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Value feature is  2420.384467512495\n",
+      "The median of the Value feature is  700.0\n",
+      "The mode of the Value feature is  700.0\n",
+      "The variance of the Value feature is  31263245.08177126\n",
+      "The skewness of the Value feature is  7.079202881287437\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Wage feature is  9.731312132696216\n",
+      "The median of the Wage feature is  3.0\n",
+      "The mode of the Wage feature is  1.0\n",
+      "The variance of the Wage feature is  483.96877836719494\n",
+      "The skewness of the Wage feature is  7.906018919266893\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the International Reputation feature is  1.1129236008128742\n",
+      "The median of the International Reputation feature is  1.0\n",
+      "The mode of the International Reputation feature is  1.0\n",
+      "The variance of the International Reputation feature is  0.15488460269849116\n",
+      "The skewness of the International Reputation feature is  4.066667432561947\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Skill Moves feature is  2.3613084420948294\n",
+      "The median of the Skill Moves feature is  2.0\n",
+      "The mode of the Skill Moves feature is  2.0\n",
+      "The variance of the Skill Moves feature is  0.5702765742840729\n",
+      "The skewness of the Skill Moves feature is  0.15009600183951777\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Joined feature is  2016.4206074586698\n",
+      "The median of the Joined feature is  2017.0\n",
+      "The mode of the Joined feature is  2018\n",
+      "The variance of the Joined feature is  4.073107112023899\n",
+      "The skewness of the Joined feature is  -2.5756362922472484\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Height feature is  5.946771114415258\n",
+      "The median of the Height feature is  5.916666666666667\n",
+      "The mode of the Height feature is  6.0\n",
+      "The variance of the Height feature is  0.04862643644388867\n",
+      "The skewness of the Height feature is  -0.015476346665881605\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Weight feature is  165.97912880665237\n",
+      "The median of the Weight feature is  165.0\n",
+      "The mode of the Weight feature is  165.0\n",
+      "The variance of the Weight feature is  242.51131988452826\n",
+      "The skewness of the Weight feature is  0.21687243215059043\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n",
+      "The mean of the Release Clause feature is  4585.060971116802\n",
+      "The median of the Release Clause feature is  1300.0\n",
+      "The mode of the Release Clause feature is  4585.06080634501\n",
+      "The variance of the Release Clause feature is  113005710.96029323\n",
+      "The skewness of the Release Clause feature is  7.436396238216339\n",
+      "---------------------------------------------------------------\n",
+      "---------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in numerical_columns:\n",
+    "    print(f\"The mean of the {column} feature is \",data[column].mean())\n",
+    "    print(f\"The median of the {column} feature is \",data[column].median())\n",
+    "    print(f\"The mode of the {column} feature is \",data[column].mode()[0])\n",
+    "    print(f\"The variance of the {column} feature is \",data[column].var())\n",
+    "    print(f\"The skewness of the {column} feature is \",data[column].skew())\n",
+    "    print(\"---------------------------------------------------------------\")\n",
+    "    print(\"---------------------------------------------------------------\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
